syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "github.com/canonical/ubuntu-pro-for-windows/agentapi";

package agentapi;

service UI {
    rpc ApplyProToken (ProAttachInfo) returns (google.protobuf.Empty) {}
    rpc Ping (google.protobuf.Empty) returns (google.protobuf.Empty) {}
    rpc GetSubscriptionInfo(google.protobuf.Empty) returns (SubscriptionInfo) {}
}

message ProAttachInfo {
    string token = 1;
}

message SubscriptionInfo {
    string productId = 1;           // The ID of the Ubuntu Pro For Windows product on the Microsoft Store.
    bool immutable = 2;             // True if the user is not allowed to modify the subscription.
    
    oneof subscriptionType {
        google.protobuf.Empty none = 3;             // There is no active subscription.
        google.protobuf.Empty user = 4;             // The subscription is managed by the user with a pro token from the GUI or the registry.
        google.protobuf.Empty organization = 5;     // The subscription is managed by the sysadmin with a pro token from the registry.
        google.protobuf.Empty microsoftStore = 6;   // The subscription is managed via the Microsoft store.
    };
}

service WSLInstance {
    rpc Connected (stream DistroInfo) returns (stream Port) {}
}

message DistroInfo {
    string wsl_name = 1;
    string id = 2;
    string version_id = 3;
    string pretty_name = 4;
    bool pro_attached = 5;
    string hostname = 6;
}

message Port {
    uint32 port = 1;
}


